[gd_scene load_steps=3 format=2]

[ext_resource path="res://Closed_Dialog.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 51.2445

[node name="Closed_Dialog" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Closed_Dialog_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Closed_Dialog_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
